[BACKEND] Añadido el routineId al DTO para poder navegar a las rutinas. refs #4291 @.5h